tests/ui/rfcs/rfc-2632-const-trait-impl/call-const-trait-method-fail.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/call-const-trait-method-fail.rs:1:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `u32: ~const Plus` is not satisfied
  --> $DIR/call-const-trait-method-fail.rs:25:5
   |
LL |     a.plus(b)
   |     ^ the trait `~const Plus` is not implemented for `u32`
   |
   = help: the trait `Plus` is implemented for `u32`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
